# ros-basic-tutorial

./: .gitignore  M350.py  README.md  ROS_Commands_Summary.md  Step09_using_rosed_to_edit_files_in_ROS.md  Step10_creating_ROS_msg_and_srv.md  Step1_Installing_and_configuring_ROS_environment.md  Step2_Navigating_ROS_file_system.md  Step4_Building_ROS_package.md  Step5_ROS_Nodes.md  Step6_ROS_Topics.md  Step7_ROS_Services_and_Parameters.md  Step8_rqt_console_and_roslaunch.md  hold_point_test.py  italian.py  laundroid.py  nextage.py  nextage_tutorials.md  package.xml  talker-listener.sh  test_interrupt_hironx.py  test_nextage.py  test_nextage2.py  ubuntu_xenial.md  utility.py  vision.py
beginner_tutorials/launch/: talk-listen.launch
memo/: B03_Creating_ROS_package.md  B05_ROS_Nodes.md  B10_creating_ROS_msg_and_srv.md  B11_Simple_Publisher_and_Subscriber_C++.md  B12_Simple_Publisher_and_Subscriber_Python.md  B13_Simple_Service_and_Client_C++.md  B14_Simple_Service_and_Client_Python.md  I01_Creating_ROS_package_by_hand.md  I02_Managing_System_Dependencies.md  I03_Roslaunch_tips_for_large_projects.md  I04_Running_ROS_across_multiple_machines.md  I05_Defining_Custom_Messages.md  I05_Using_C++_class_in_Python.md  I06_Using_C++_class_in_Python.md  ROS_Commands_Summary.md  Step11_Simple_Publisher_and_Subscriber_C++.md  Step13_Simple_Service_and_Client_C++.md  Step15_Recording_and_playing_back_data.md  Step16_roswtf.md
nextage/: nextage.py  transformations.py
python_bindings_tutorial/: CMakeLists.txt  package.xml
python_bindings_tutorial/scripts/: test_binding.py
(+11 files in other folders)
